# SD-BELT

./: .gitignore  README.md
AI/ai_model/: readme.md
AI/ai_model/preprocessing/: add_false_samples.py  balance_count.py  compute_prune_targets.py  count_class.py  count_null.py  delete_null.py  remap_labels.py
AI/ai_model/test/: inference_test.py
AI/ai_model/train/: train.ipynb
AI/object_detection_deneme/: image_interface.h  object_detection.cpp  report.txt
AI/object_detection_deneme/denemeler/: dual_camera_test.cpp
AI/object_detection_deneme/utils/: ArduinoSerial.cpp  ArduinoSerial.h  HttpServerHandler.cpp  HttpServerHandler.hpp  Object_info.cpp  Object_info.hpp  http_client.cpp  http_client.h  scan_request_dto.h  system_messages_dto.h  system_status_dto.h  udp_sender.hpp  utils.cpp  utils.hpp
AI/object_detection_deneme/utils/API Server/: Server.cpp
Desktop/: CameraReceiver.cpp  CameraReceiver.h  Globals.h  Logs.cpp  Logs.h  SD-Belt.pro  SystemInfoRetriever.h  SystemLogRetriever.cpp  SystemLogRetriever.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  systeminforetriever.cpp
Desktop/styles/: CentralWindow.qss  DashboardActionButton.qss  Header.qss  MainWindow.qss  MenuButton.qss  MenuButtonSelected.qss  TextStyles.qss
Hardware/: ArduinoSerial.cpp  ArduinoSerial.h  Makefile  app  main.cpp
Hardware/SerialPort_communication/: SerialPort_communication.ino
sd-belt-mobile-ui/sdbeltmobile/: CMakeLists.txt  HomePage.qml  LoginPage.qml  Main.qml  OperationsPage.qml  ProductStatsPage.qml  ProductsPage.qml  apiservice.cpp  apiservice.h  main.cpp  resources.qrc
sd-belt-mobile-ui/sdbeltmobile/android/: AndroidManifest.xml
sd-belt-server/src/main/java/gtu/cse/cse396/sdbelt/scan/domain/model/: Scan.java
